--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "yarn": "yarn",
+    "install": "yarn install",
+    "add": "yarn add",
+    "remove": "yarn remove",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -30,6 +34,7 @@
     "@testing-library/react": "^14.0.0",
     "jest": "^29.6.1",
     "jest-environment-jsdom": "^29.6.1",
-    "sass": "^1.64.0"
+    "sass": "^1.64.0",
+    "yarn": "^1.22.21"
   }
 }
